2003-03-29  Raja R Harinath  <harinath@acm.org>

	Speedup Automake::DisjConditions::invert().
	* lib/Automake/Condition.pm (multiply): New.
	* lib/Automake/DisjConditions.pm (_multiply): Use it.
	(sub_conditions): Likewise.

	* lib/Automake/Condition.pm (reduce): Rename to ...
	(reduce_and): ... this.
	(reduce_or): New.
	* lib/Automake/DisjConditions.pm (_multiply): Use reduce_or().
	* lib/Automake/tests/Condition.pl (test_reduce): Rename to ...
	(test_reduce_and): ... this.
	(test_reduce_or): New.
	* lib/Automake/tests/DisjConditions.pl 
	(test_invert): Update to reflect effect of reduce_or().
	(test_simplify): Don't skip invert() on larger inputs.

2003-03-29  Raja R Harinath  <harinath@cs.umn.edu>

	* tests/yacc8.test: Add a $sleep before modifying Makefile.am so
	that timestamp will change.

2003-03-23  Akim Demaille  <akim@epita.fr>
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/tags.am (TAGS): Use --etags-include instead of --include,
	when supported by etags (Exuberant Ctags).
	* tests/tagsub.test: Rewrite to _run_ the `tags' rule.

2003-03-20  Alexandre Duret-Lutz  <adl@gnu.org>

	For Debian Bug #185388:
	* automake.texi (Extending): Augment the install-exec-hook
	discussion with an example how to symlink a versioned binary.
	* tests/insthook.test: Rewrite to test the above example.
	Report from James R. Van Zandt.

2003-03-19  Alexandre Duret-Lutz  <adl@gnu.org>

	* Makefile.am (maintainer-check): Allow `automake:' tokens,
	occuring in location.test.  Automake now has 5 legitimate
	unsubstituted @strings@.

	* tests/aclocal4.test: Require GNU make.

2003-03-14  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/aclocal4.test: New file.  Test for the ACLOCAL_M4 bug below.
	* tests/Makefile.am (TESTS): Add aclocal4.test.

2003-03-14  Jim Meyering  <jim@meyering.net>

	* automake.in (scan_aclocal_m4): Define ACLOCAL_M4 even in
	subdirectories.  Makefile.in depends on that variable.

2003-03-13  Alexandre Duret-Lutz  <adl@gnu.org>
