@@ -7365,6 +7365,25 @@ sub target_defined
 
 ################################################################
 
+# &check_trailing_slash ($WHERE, $LINE)
+# --------------------------------------
+# Return 1 iff $LINE ends with a slash.
+# Might modify $LINE.
+sub check_trailing_slash ($\$)
+{
+  my ($where, $line) = @_;
+
+  # Ignore `##' lines.
+  return 0 if $$line =~ /$IGNORE_PATTERN/o;
+
+  # Catch and fix a common error.
+  msg "syntax", $where, "whitespace following trailing backslash"
+    if $$line =~ s/\\\s+\n$/\\\n/;
+
+  return $$line =~ /\\$/;
+}
+
+
 # &append_comments ($VARIABLE, $SPACING, $COMMENT)
 # ------------------------------------------------
 # Append $COMMENT to the other comments for $VARIABLE, using
@@ -7437,7 +7456,7 @@ sub read_am_file ($$)
 	{
 	    last;
 	}
-	$saw_bk = /\\$/ && ! /$IGNORE_PATTERN/o;
+	$saw_bk = check_trailing_slash ($where, $_);
     }
 
     # We save the conditional stack on entry, and then check to make
@@ -7464,7 +7483,7 @@ sub read_am_file ($$)
 	$_ =~ s/\@MAINT\@//g
 	    unless $seen_maint_mode;
 
-	my $new_saw_bk = /\\$/ && ! /$IGNORE_PATTERN/o;
+	my $new_saw_bk = check_trailing_slash ($where, $_);
 
 	if (/$IGNORE_PATTERN/o)
 	{
