@@ -42,6 +42,7 @@ auxdir2.test \
 backsl.test \
 backsl2.test \
 backsl3.test \
+backsl4.test \
 badline.test \
 badprog.test \
 block.test \
