@@ -1,0 +1,51 @@
+#! /bin/sh
+# Copyright (C) 2003  Free Software Foundation, Inc.
+#
+# This file is part of GNU Automake.
+#
+# GNU Automake is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# GNU Automake is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with Automake; see the file COPYING.  If not, write to
+# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+# Boston, MA 02111-1307, USA.
+
+# Make sure we diagnose and fix white spaces following backslash.
+# Report from Peter Muir.
+
+. ./defs || exit 1
+
+set -e
+
+echo AC_OUTPUT >>configure.in
+
+# Note: trailing whitespaces used during the test should not appear as
+# trailing whitespaces in this file, or they will get stripped by any
+# reasonable editor.
+
+echo 'bin_SCRIPTS = foo \ ' >Makefile.am
+cat >>Makefile.am <<'END'
+bar
+ok:
+	:
+END
+echo 'data_DATA = baz \  ' >>Makefile.am
+echo '	fum' >>Makefile.am
+
+$ACLOCAL
+$AUTOCONF
+$AUTOMAKE 2>stderr && exit 1
+cat stderr
+grep ':1:.*whitespace' stderr
+grep ':5:.*whitespace' stderr
+./configure
+# Older versions of Automake used to produce invalid Makefiles such input.
+$MAKE ok
