@@ -1,3 +1,13 @@
+2003-04-03  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (check_trailing_slash): New function (variation on
+	a patch by Peter Muir).  Diagnose whitespaces following trailing
+	backslash.
+	(read_am_file): Use it.
+	* tests/backsl4.test: New file.
+	* tests/Makefile.am (TESTS): Add backsl4.test.
+	Reported by Peter Muir.
+
 2003-03-29  Raja R Harinath  <harinath@acm.org>
 
 	Speedup Automake::DisjConditions::invert().
@@ -12,7 +22,7 @@
 	* lib/Automake/tests/Condition.pl (test_reduce): Rename to ...
 	(test_reduce_and): ... this.
 	(test_reduce_or): New.
-	* lib/Automake/tests/DisjConditions.pl 
+	* lib/Automake/tests/DisjConditions.pl
 	(test_invert): Update to reflect effect of reduce_or().
 	(test_simplify): Don't skip invert() on larger inputs.
 
